# todo-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
api/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
api/src/todo_api/: db.py  main.py  models.py  schemas.py
api/tests/: test_app.py
migrations/: 0_init.sql  add_permission.sql  create_task.sql  create_user.sql  delete_user.sql  find_is_authorized.sql  find_is_creator.sql  find_permissions.sql  find_task.sql  get_current_user.sql  permissions.sql  read_tasks.sql  remove_permission.sql  remove_task.sql  remove_user.sql  task.sql  update_task.sql  update_user.sql  user.sql
src/todo_api/: auth.py  db.py  main.py  models.py  schemas.py  temp.py
tests/: test_app.py
