[build-system]
requires = ["setuptools >= 72.1"]
build-backend = "setuptools.build_meta"

[project]
name = "todo_api"
version = "0.1.0"
dependencies = [
    "fastapi >= 0.112",
    "pyjwt >= 2.9",
    "passlib[bcrypt] >= 1.7",
    "psycopg[binary, pool] >= 3.2",
]
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
testing = [
    "ruff >= 0.5",
    "pytest >= 8.3",
    "pytest-cov >= 5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
addopts = "--cov=todo_api"
pythonpath = [
    ".", "src",
]
testpaths = [
    "tests",
]
