[metadata]
name = todo_api

[options]
packages = 
    todo_api
install_requires = 
    fastapi >= 0.112
    pyjwt >= 2.9
    passlib[bcrypt] >= 1.7
    psycopg[binary, pool] >= 3.2
python_requires = >=3.12
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    ruff >= 0.5
    pytest >= 8.3
    pytest-cov >= 5.0

[options.package_data]
todo_api = py.typed
