[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo_api"
version = "0.1.0"
dependencies = [
    "fastapi[standard] >= 0.115",
    "pyjwt >= 2.9",
    "bcrypt >= 4.2",
    "psycopg[binary, pool] >= 3.2",
    "SQLAlchemy[asyncio] >= 2.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
testing = [
    "ruff >= 0.6",
    "pytest >= 8.3",
    "pytest-cov >= 5.0",
    "pytest-asyncio >= 0.24",
    "httpx >= 0.27",
    "asgi-lifespan >= 2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
addopts = "--cov=todo_api"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
pythonpath = [
    ".", "src",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
# Starlette and SQLAlchemy use different threading for async
concurrency = ["thread", "greenlet"]
